hphp/test/zend/good/zend/bug30922.php.exp
HipHop Fatal error: Undefined interface: RecurisiveFooFar in hphp/test/zend/good/zend/bug30922.php on line 2
